--- a/devcontainer.json
+++ b/devcontainer.json
@@ -25,14 +25,13 @@
                 "visualstudioexptteam.vscodeintellicode",
                 "ms-vscode.vscode-node-azure-pack",
                 "formulahendry.auto-close-tag",
-                "formulahendry.auto-rename-tag"
+                "formulahendry.auto-rename-tag",
+                "ritwickdey.live-sass"
             ],
             "settings": {
                 "editor.formatOnSave": true,
                 "editor.defaultFormatter": "esbenp.prettier-vscode",
-                "prettier.requireConfig": true,
-                "eslint.format.enable": true,
-                "files.autoSave": "onFocusChange"
+                "prettier.requireConfig": true
             }
         }
     },
@@ -45,5 +44,7 @@
     },
     "forwardPorts": [3000],
     "remoteUser": "vscode",
-    "mounts": ["source=${localWorkspaceFolder}/.env,target=/workspace/.env,type=bind,consistency=cached"]
+    "mounts": [
+        "source=${localWorkspaceFolder}/.env,target=/workspace/.env,type=bind,consistency=cached"
+    ]
 }
